<resources>
    <string name="app_name">Noticias_App</string>

    <string name="titulo">Noticias App</string>

    <string name="buscar">Buscar</string>
    <string name="noticias">Noticias</string>

    <string name="titulonoticia">Titulo Noticia</string>
    <string name="autornoticia">Autor</string>
    <string name="fechaPublicacion">FechaPublicado</string>
    <string name="fuenteonoticia">Fuente</string>

    <string name="cuerponoticia">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
        Lorem Ipsum has been the industry standard dummy text ever since the 1500s, when an unknown printer
        took a galley of type and scrambled it to make a type specimen book. It has survived not only five
        centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was
        popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more
        recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>