<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_margin="4dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/item_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="5dp"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#D5CFCF"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivImagenNoticia"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:src="@drawable/ic_imagen"/>
            <TextView
                android:id="@+id/tituloNoticia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titulonoticia"
                android:textSize="20sp"
                android:textStyle="bold"
                android:fontFamily="monospace"
                android:gravity="center"
                android:layout_marginStart="10dp"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_fechapublicado"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="10dp"/>
                <TextView
                    android:id="@+id/tvFechaPublicaion"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/fechaPublicacion"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_autor"
                    android:layout_marginStart="90dp"
                    android:layout_marginBottom="10dp"/>
                <TextView
                    android:id="@+id/tvAutor"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/autornoticia"/>


            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>